Gc/lab2 update (#22)

--- a/lab2-us/GBM8378_Lab2_US_2021.ipynb
+++ b/lab2-us/GBM8378_Lab2_US_2021.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>1.2. À quel temps le pic de l’écho devrait-il apparaître sur l’écran ? (1pt)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>1.2. Quelle formule permet de calculer le temps $t$ après lequel l’écho d'un signal émis à $t_0=0s$ sera detecté par le transducteur ? (1pt)</b></div>"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>2.1. Le signal <I>scanA.npy</I> représente la réponse ultrasonore du scan d'une tige. Interprétez la décroissance du signal. (0.5pt)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>2.1. Le signal <I>scanA.npy</I> représente la réponse ultrasonore du scan de deux tiges identiques, localisées à différentes profondeurs. Interprétez la décroissance du signal. (0.5pt)</b></div>"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "plt.figure(figsize=[8, 8])\n",
     "plt.plot(scanA)\n",
     "plt.title(\"Signal ScanA\")\n",
-    "plt.xlabel(\"Nombre d'échantillon\")\n",
+    "plt.xlabel(\"Echantillon n$\\degree$\")\n",
     "plt.ylabel(\"Amplitude de l'onde sonore\");"
    ]
   },
@@ -252,7 +252,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>2.2. Proposez une méthode pour la corriger et appliquez cette méthode. Affichez l’écho corrigé de ce biais. (1pt)</b>\n",
+    "<b>2.2. Proposez une méthode pour corriger cette décroissance et obtenir un signal de fond quasi-nul. Appliquez cette méthode puis affichez l’écho corrigé obtenu. (1pt)</b>\n",
+    "    \n",
+    "**Astuce:** Trouvez un approximation de la courbe de décroissance pour pouvoir la compenser par la suite.\n",
     "</div>"
    ]
   },
@@ -274,7 +276,7 @@
     "# Commencez votre code ici (7 lignes max)\n",
     "\n",
     "plt.title(\"Echo corrigé\")\n",
-    "plt.xlabel(\"Nombre d'échantillon\")\n",
+    "plt.xlabel(\"Echantillon n$\\degree$\")\n",
     "plt.ylabel(\"Amplitude de l'onde sonore\");"
    ]
   },
@@ -282,8 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>2.3. Sachant que la fréquence d’échantillonnage est de 100 MHz et que la vitesse du son dans l'eau est de 1500 m/s, à quelle distance est placée la tige? (0.5pt) </b></div>\n",
-    "\n"
+    "<div class=\"alert alert-block alert-warning\"><b>2.3. Sachant que la fréquence d’échantillonnage est de 100 MHz et que la vitesse du son dans l'eau est de 1500 m/s, à quelle distance est placée chacune des tiges? (0.5pt) </b></div>"
    ]
   },
   {
@@ -292,16 +293,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Fs = 100e6  # Fréquence d'échantillonage (Hz)\n",
+    "Vs = 1500  # Célérité du son dans l'eau (m/s)\n",
+    "\n",
     "# Commencez votre code ici (7 lignes max)\n",
     "\n",
-    "print(f\"La distance de la tige est de {d} m.\")"
+    "print(f\"La distance de la première tige est de {d1[0]} m.\")\n",
+    "print(f\"La distance de la deuxième tige est de {d2[0]} m.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>2.4. Effectuez la transformée de Fourier numérique des données recueillies afin de retrouver la réponse en fréquence du transducteur. Affichez le résultat obtenu ainsi que les données fournies par le constructeur (<I>H2.npy</I>) sur un même graphique, identifiez les axes et la fréquence centrale. (1pt)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>2.4. Effectuez la transformée de Fourier numérique des données recueillies afin de retrouver la réponse en fréquence du transducteur. Affichez le résultat obtenu ainsi que les données fournies par le constructeur (<I>H.npy</I>) sur un même graphique, identifiez les axes et la fréquence centrale. (1pt)</b></div>"
    ]
   },
   {
@@ -315,13 +320,13 @@
     "# Commencez votre code ici (3 lignes max)\n",
     "\n",
     "# Comparer avec les données constructeur\n",
-    "H2 = np.load('H2.npy')\n",
+    "H = np.load('H.npy')\n",
     "# Interpolate between 0 and 50 Mhz\n",
     "nbpts = 2048 # Nombre de données acquises par 1 transducteur\n",
-    "H2 = np.interp(np.linspace(0, 50, nbpts // 2 + 1), np.linspace(0, 30, len(H2)), H2, left=0, right=0)\n",
-    "H2 = np.concatenate((H2[-1:0:-1], H2[:-1]))\n",
+    "H = np.interp(np.linspace(0, 50, nbpts // 2 + 1), np.linspace(0, 30, len(H)), H, left=0, right=0)\n",
+    "H = np.concatenate((H[-1:0:-1], H[:-1]))\n",
     "\n",
-    "plt.plot(np.linspace(-Fs/2,Fs/2,2048),  H2, color='red');\n"
+    "plt.plot(np.linspace(-Fs/2,Fs/2,2048),  H, color='red');"
    ]
   },
   {
@@ -415,8 +420,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>3.1. Comment interprétez-vous cette convolution? Pourquoi le signal recueilli diffère-t-il du signal réel ? <br>\n",
-    "    La réponse du transducteur est fournie par le fournisseur dans le fichier H2.mat (1pt)</b>\n",
+    "<b>3.1. Comment interprétez-vous cette convolution? Pourquoi le signal recueilli diffère-t-il du signal réel ? </b><br>\n",
+    "    La réponse du transducteur est fournie par le fournisseur dans le fichier H.npy (1pt)\n",
     "</div>"
    ]
   },
@@ -463,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image de la partie précédente et comparer. Vous pouvez utiliser µ=5.10-8. (2pts)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image de la partie précédente et comparer. Vous pouvez utiliser $\\mu=5\\times10^{-8}$. (2pts)</b></div>"
    ]
   },
   {
@@ -472,13 +477,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Charger H2 \n",
-    "H2 = np.load('H2.npy')\n",
-    "# Interpoler entre 0 et 50 Mhz\n",
-    "nbpts = 2048  # Nombre de données acquises par 1 transducteur\n",
-    "H2 = np.interp(np.linspace(0, 50, nbpts // 2 + 1), np.linspace(0, 30, len(H2)), H2, left=0, right=0)\n",
-    "H2 = np.concatenate((H2[-1:0:-1], H2[:-1]))\n",
-    "\n",
     "# Création d'un subplot 1 par 2\n",
     "plt.figure(figsize=[10, 5])\n",
     "plt.subplot(1,2,1)\n",
@@ -534,6 +532,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\"><b>4.1. Utilisez le script ci-dessous pour afficher le champ de pression émis par un transducteur composé d'un unique élément au cours du temps. Expliquez les résultats obtenus. (0.5pt)</b><br>\n",
+    "\n",
+    "**Conseil:** Lorsque votre solution vous semble satisfaisante, vous pouvez passer `prm['gridsize']` à **256** ou **512** pour obtenir de meilleure images (les simulations prendront beaucoup plus de temps).\n",
     "</div>"
    ]
   },
@@ -550,7 +550,6 @@
     "## Authors: Jonathan Poree, Samuel Desmarais --- Provost Ultrasound Lab\n",
     "## Inspired from work in: Section 2.3 of https://doi.org/10.1088/1361-6560/aae3c3\n",
     "\n",
-    "import numpy as np\n",
     "from labUSfunctions import ussimforward, prepare_animation\n",
     "\n",
     "##################\n",
@@ -559,9 +558,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
-    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -582,9 +581,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
     "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -639,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.3. À quoi ressemble le champ de pression à un instant t fixe (t ≈ 3µs)? (0.5pt) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.3. A quoi ressemble le champ de pression à un instant t fixe (t ≈ 1.5µs) ?(0.5pt) </b><br>\n",
     "Affichez l'image contenue dans la matrice RF qui correspond à l'état du front d'onde au moment t. Utilisez les paramètres de la simulation pour trouver l'indice de cette image. \n",
     "</div>"
    ]
@@ -680,9 +679,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
-    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -703,9 +702,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
     "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -746,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 3µs. (1.5pts) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 1.5µs. (1.5pts) </b><br>\n",
     "Delays prend des valeurs en s. </div>"
    ]
   },
@@ -762,9 +761,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
-    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -785,9 +784,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
     "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -821,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.6. Quel est l’intérêt de pouvoir focaliser en émission? Y a-t-il un désavantage à utiliser un grand nombre de transducteurs répartis sur une large distance? (0.5pt)</b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.6. Quel est l’intérêt de pouvoir focaliser en émission? Y a-t-il un désavantage à utiliser un grand nombre de transducteurs répartis sur une large distance? (1pt)</b>\n",
     "</div>"
    ]
   },
@@ -850,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=5mm. Expliquez vos résultats. (1.5pts)</b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.8. Toujours avec 10 élements, adaptez le paramètre 'delays' afin d'effectuer un focus en x=0.5mm et z=2mm. Expliquez vos résultats. (1.5pts)</b>\n",
     "</div>"
    ]
   },
@@ -866,9 +865,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
-    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -889,8 +888,8 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['lbd'] * 32  # Lateral field of view (m)\n",
     "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
@@ -932,36 +931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.9. Sur la figure de droite, en dehors du point de focalisation, nous observons des zones présentant de fortes intensités acoustiques (e.g. [x=2mm, z=6mm]). A quoi cela est-il-dû ? (0.5pt)\n",
-    "</b></div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.10. Quel est l’intérêt de pouvoir diriger l’onde? (0.5pt)</b></div> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.11. En faisant suite à la question 4.9, on observe que les zones non focalisées présentent une intensité acoustique du même ordre de grandeur que l'intensité en [x=3mm, z=5mm]. Comment expliquez-vous que, malgré cela, on puisse obtenir une image de qualité satisfaisante en mode B. (0.5pt)</b></div> "
+    "<div class=\"alert alert-block alert-warning\"><b>4.9. Quel est l’intérêt de pouvoir diriger l’onde? (1pt)</b></div> "
    ]
   },
   {
@@ -988,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
