Update lab2 according to 2022 feedback

--- a/lab2-us/GBM8378_Lab2_US_2021.ipynb
+++ b/lab2-us/GBM8378_Lab2_US_2021.ipynb
@@ -106,11 +106,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>1.3.\tPour des signaux expérimentaux, est-il mieux d'enregistrer une fenêtre temporelle plus petite ou plus grande afin de déterminer la réponse en fréquence ? Justifier votre réponse. (1pt)<br></b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>1.3.\tPour des signaux expérimentaux acquis avec la même fréquence d'échantillonage, est-il mieux d'enregistrer une fenêtre temporelle plus petite ou plus grande afin de déterminer la réponse en fréquence ? Justifier votre réponse. (1pt)<br></b>\n",
     "\n",
     "<img src=\"attachment:image.png\" alt=\"Temporal Windows\" style=\"display: block;margin-left: auto;margin-right: auto;width: 90%;border-radius: 30px;border: 2px solid black;\"/>\n",
     "\n",
-    "<center> <i>Question 1.3. Exemple de fenêtres temporelles différentes. Enregistrements de 10 s (gauche) et de 25 s (droite).\n",
+    "<center> <i>Question 1.3. Exemple de fenêtres temporelles différentes. Enregistrements de 20 $\\mu$s (gauche) et de 50 $\\mu$s (droite).\n",
     "    </i></center></div>"
    ]
   },
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>2.6. Comparez avec la valeur fournie par le fabriquant du transducteur (voir section suivante). (0.5pt)</b></div> "
+    "<div class=\"alert alert-block alert-warning\"><b>2.6. Comparez avec la valeur fournie par le fabriquant du transducteur (<I>H.npy</I>). (0.5pt)</b></div> "
    ]
   },
   {
@@ -437,9 +437,26 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\"><b>\n",
-    "3.2. Résoudre l’équation (1) pour obtenir le signal réel f(t) sachant la réponse du transducteur g(t). (1pt)<br><br>\n",
-    "En pratique un terme de régularisation µ est ajouté et l’équation utilisée est : <br>\n",
-    "    $F(\\omega)=\\frac{G(\\omega)\\cdot H(\\omega)}{H(\\omega)^2+\\mu}$</b>\n",
+    "3.2. Résoudre l’équation (1) pour obtenir le signal réel f(t) sachant la réponse du transducteur g(t). (1pt)</b></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>3.3. En pratique un terme de régularisation µ est ajouté et l’équation utilisée est : <br>\n",
+    "    $F(\\omega)=\\frac{G(\\omega)\\cdot H(\\omega)}{H(\\omega)^2+\\mu}$<br>\n",
+    "    \n",
+    "Quelle est l’utilité de ce terme de régularisation ? (1pt)<br>\n",
+    "\n",
+    "</b>\n",
     "</div>"
    ]
   },
@@ -454,21 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>3.3. Quelle est l’utilité de ce terme de régularisation ? (1pt)</b></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image de la partie précédente et comparer. Vous pouvez utiliser $\\mu=5\\times10^{-8}$. (2pts)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image de la partie précédente (en utilisant <I>H.npy</I>) et comparer avec les données de <I>rawdata.npy</I>. Vous pouvez utiliser $\\mu=5\\times10^{-8}$. (2pts)</b></div>"
    ]
   },
   {
