Update lab3 according to 2022 feedback

--- a/lab3-irm/gbm8378-lab3-irm.ipynb
+++ b/lab3-irm/gbm8378-lab3-irm.ipynb
@@ -261,16 +261,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "Pour faire cela regardez les possibilités de <code>slicing</code> en Python. ce <a href=\"https://dev.to/duomly/what-is-slicing-in-python-58f2\">tutorial</a> vous permettra de voir les bases. Cependant vous êtes encouragé à chercher sur internet.\n",
-    "Il est également possible de proposer une version plus algorithmique.\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -357,7 +347,7 @@
     "Observez-vous une différence sur la magnitude du k-space? Sur la phase du k-space? \n",
     "Expliquez à quoi sont dus ces résultats. \n",
     "    \n",
-    "Indiquez aussi pourquoi la phase du k-space est en « arc en ciel ». (2pts)\n",
+    "Indiquez aussi pourquoi la différence de phase du k-space (entre l'image originale et l'image décalée) à une allure en \"dents de scie\". (2pts)\n",
     "</div>"
    ]
   },
