clarifications questions lab1

--- a/lab1-ct/GBM8378_Lab1_CT.ipynb
+++ b/lab1-ct/GBM8378_Lab1_CT.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\"><b>1.4. On considère ici que les rayons X se propagent en ligne droite dans l’objet à imager. Comment peut-on rendre l’effet Compton négligeable pour que cette hypothèse soit vraie ?</b></div>"
+    "<div class=\"alert alert-warning\"><b>1.4. On considère ici que les rayons X se propagent en ligne droite dans l’objet à imager. Comment peut-on limiter la détection de rayons-x issus de la diffusion de Compton pour que cette hypothèse soit vraie ?</b></div>"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "<b>\n",
-    "3.4. Expliquer l'intérêt du filtre |ω| par rapport à d'autres types de filtre. L'espace d'application du filtre (spatial ou fréquentiel) a-t-il un effet sur les images filtrées? (1pt)</b>\n",
+    "3.4. Expliquer l'intérêt du filtre |ω| dans le cadre d'une rétroprojection par rapport à d'autres types de filtre. L'espace d'application du filtre (spatial ou fréquentiel) a-t-il un effet sur les images filtrées? (1pt)</b>\n",
     "</div>"
    ]
   },
