clarifications questions lab2

--- a/lab2-us/GBM8378_Lab2_US.ipynb
+++ b/lab2-us/GBM8378_Lab2_US.ipynb
@@ -298,8 +298,8 @@
     "\n",
     "# Commencez votre code ici (7 lignes max)\n",
     "\n",
-    "print(f\"La distance de la première tige est de {d1[0]} m.\")\n",
-    "print(f\"La distance de la deuxième tige est de {d2[0]} m.\")"
+    "print(f\"La distance de la première tige est de {d1} m.\")\n",
+    "print(f\"La distance de la deuxième tige est de {d2} m.\")"
    ]
   },
   {
@@ -385,8 +385,8 @@
     "(1)<br>\n",
     "où :<ul>\n",
     "    $g(t)=$données recueillies<br>\n",
-    "    $f(t)=$données réelles<br>\n",
-    "    $h(t)=$réponse temporelle du transducteur<br>\n",
+    "    $f(\\tau)=$données réelles<br>\n",
+    "    $h(\\tau)=$réponse temporelle du transducteur<br>\n",
     "    </ul>\n",
     "</b>\n",
     "<sup>1</sup>Le signal provenant de réflexions sur des éléments de d’autres transducteur n’est pas considéré.\n",
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image de la partie précédente (en utilisant <I>H.npy</I>) et comparer avec les données de <I>rawdata.npy</I>. Vous pouvez utiliser $\\mu=5\\times10^{-8}$. (2pts)</b></div>"
+    "<div class=\"alert alert-block alert-warning\"><b>3.4. Effectuez la déconvolution de l’image <I>rawdata.npy</I> (en utilisant <I>H.npy</I>) et comparer avec les données de <I>rawdata.npy</I>. Vous pouvez utiliser $\\mu=5\\times10^{-8}$. (2pts)</b></div>"
    ]
   },
   {
@@ -934,7 +934,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.9. Quel est l’intérêt de pouvoir diriger l’onde? (1pt)</b></div> "
+    "<div class=\"alert alert-block alert-warning\"><b>4.9. Quel est l’intérêt de pouvoir diriger l’onde dans le contexte d'imagerie en mode B? (1pt)</b></div> "
    ]
   },
   {
