corrections questions lab3

--- a/lab3-irm/GBM8378-lab3-IRM.ipynb
+++ b/lab3-irm/GBM8378-lab3-IRM.ipynb
@@ -841,7 +841,7 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    \n",
-    "3.8. À partir de la carte statistique ci-dessous, retrouver le type de stimulation qui a été utilisé pour cette expérience d’IRM fonctionnelle. Pour cela, utilisez l’atlas interactif de [Brodmann](http://www.fmriconsulting.com/brodmann/Interact.html'), qui relie aire corticale et fonction. Aucun code n’est nécessaire. (1pts)\n",
+    "3.8. À partir de la carte statistique ci-dessous, retrouver le type de stimulation qui a été utilisé pour cette expérience d’IRM fonctionnelle. Pour cela, utilisez l’atlas interactif de [Brodmann](http://www.fmriconsulting.com/brodmann/Interact.html), qui relie aire corticale et fonction. Aucun code n’est nécessaire. (1pts)\n",
     "    \n",
     "<img src=\"attachment:image-2.png\" alt=\"fmri_map\" style=\"display: block;margin-left: auto;margin-right: auto;border-radius: 20px;\">\n",
     "</div>"
@@ -942,7 +942,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "4.3 Affichez deux volumes sur une ligne (en utilisant subplot). À gauche: sans encodage de diffusion, à droite : avec un encodage dans la direction verticale. (2pts) \n",
+    "4.3 Affichez deux volumes sur une ligne (en utilisant subplot). À gauche: sans encodage de diffusion, à droite : avec un encodage dans la direction verticale. N'oubliez pas de valider la direction verticale correspond à quel axe (x ou y). (2pts) \n",
     "</div>"
    ]
   },
