--- a/lab3-irm/GBM8378-lab3-IRM.ipynb
+++ b/lab3-irm/GBM8378-lab3-IRM.ipynb
@@ -942,7 +942,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "4.3 Affichez deux volumes sur une ligne (en utilisant subplot). À gauche: sans encodage de diffusion, à droite : avec un encodage dans la direction verticale. N'oubliez pas de valider la direction verticale correspond à quel axe (x ou y). (2pts) \n",
+    "4.3 Affichez deux volumes sur une ligne (en utilisant subplot). À gauche: sans encodage de diffusion, à droite : avec un encodage dans la direction verticale. N'oubliez pas de valider à quel axe (x ou y) la direction verticale correspond. (2pts) \n",
     "</div>"
    ]
   },
