--- a/lab1-ct/GBM8378_Lab1_CT.ipynb
+++ b/lab1-ct/GBM8378_Lab1_CT.ipynb
@@ -611,7 +611,7 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "<b>\n",
-    "6.5. Pour une même quantité de radiations totale, comparer des scans acquis:\n",
+    "6.5. Sur le signal bruité, pour une même quantité de radiations totale, comparer des scans acquis:\n",
     "    <br><br>\n",
     "     - avec un grand nombre d’angles et une petite quantité de radiations pour chaque angle.\n",
     "    <br>\n",
