change apres for a

--- a/lab2-us/GBM8378_Lab2_US.ipynb
+++ b/lab2-us/GBM8378_Lab2_US.ipynb
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 1.5µs. (1.5pts) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde à 1.5µs. (1.5pts) </b><br>\n",
     "Delays prend des valeurs en s. </div>"
    ]
   },
